--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <td>⭐⭐⭐⭐</td>
           <td>R</td>
           <td>⭐⭐⭐</td>
-          <td>Anchoring</td>
+          <td>JavaScript</td>
           <td>⭐⭐⭐⭐⭐</td>
         </tr>
         <tr>
